--- a/index.html
+++ b/index.html
@@ -111,13 +111,13 @@
             </div>
               </div>
 <!-- /carousel -->
-   <div id="services" class="container-fluid tbpadding text-center ">
+   <div id="services" class="container-fluid tbpadding text-center">
               <h2 class="bigpixi_head"><span>100% Satisfactory </span>Sites</h2>
               <h4>SEE WHAT I CAN DO FOR YOU!! </h4>
               <br>
           </div>
         </div>
-          <div class="container text-center background">
+          <div class="container text-center">
               <h2>What I'm Using</h2>
              <div class="row">
            <div class="col-sm-4">
@@ -157,8 +157,7 @@
 		</div>
 	</div>
 </div>
-<script src="script.js"></script>
-<div class="container">
+ <div class="container">
     <div class="col-xs-6 col-sm-3">
         <a href="#" class="thumbnail" data-toggle="modal" data-target="#lightbox">
             <img src="https://d3ui957tjb5bqd.cloudfront.net/uploads/2015/07/50PortfolioSites4.jpg" alt="...">
