--- a/index.html
+++ b/index.html
@@ -111,13 +111,13 @@
             </div>
               </div>
 <!-- /carousel -->
-   <div id="services" class="container-fluid tbpadding text-center">
+   <div id="services" class="container-fluid tbpadding text-center ">
               <h2 class="bigpixi_head"><span>100% Satisfactory </span>Sites</h2>
               <h4>SEE WHAT I CAN DO FOR YOU!! </h4>
               <br>
           </div>
         </div>
-          <div class="container text-center">
+          <div class="container text-center background">
               <h2>What I'm Using</h2>
              <div class="row">
            <div class="col-sm-4">
@@ -138,7 +138,7 @@
          <div class="col-sm-4">
              <img src="img/jquery.png" id="icon2">
               <h4>Bootstrap</h4>
-         </div>
+         </div>b
          <div class="col-sm-4">
        </div>
       </div>
@@ -157,7 +157,7 @@
 		</div>
 	</div>
 </div>
- <div class="container">
+<div class="container">
     <div class="col-xs-6 col-sm-3">
         <a href="#" class="thumbnail" data-toggle="modal" data-target="#lightbox">
             <img src="https://d3ui957tjb5bqd.cloudfront.net/uploads/2015/07/50PortfolioSites4.jpg" alt="...">
