--- a/index.html
+++ b/index.html
@@ -1,14 +1,16 @@
 <!DOCTYPE html>
 <html>
 <link rel="stylesheet" href="css\normalize.css">
+<script src="https://code.jquery.com/jquery-1.12.3.min.js" integrity="sha256-aaODHAgvwQW1bFOGXMeX+pC4PZIPsvn2h1sArYOhgXQ=" crossorigin="anonymous"></script>b
 <link rel="stylesheet" href="http://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.6.3/css/font-awesome.min.css">
 <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
+<script src="js/script.js"></script>
 <link rel="stylesheet" href="css\style.css">
 <meta charset="utf-8">
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <meta http-equiv="X-UA-Compatible" content="IE=edge">
 <link href='https://fonts.googleapis.com/css?family=Montserrat Alternates' rel='stylesheet'>
-<nav class="navbar navbar-default navbar-fixed-top" role="navigation">
+<nav class="navbar navbar-default navbar-fixed-top" role="navigation"
       <div class="container">
     <!-- Brand and toggle get grouped for better mobile display -->
     <div class="navbar-header">
@@ -121,14 +123,14 @@
               <h2>What I'm Using</h2>
              <div class="row">
            <div class="col-sm-4">
-              <img src="img/html5.png" id="icon">
+              <img src="img/html5.png" class="icon">
               <h4>HTML5</h4></div>
          <div class="col-sm-4">
-              <img src="img/bootstrap.png" id="icon">
+              <img src="img/bootstrap.png" class="icon">
               <h4>Bootstrap</h4>
            </div>
          <div class="col-sm-4">
-              <img src="img/css3.png" id="icon">
+              <img src="img/css3.png" class="icon">
               <h4>CSS3</h4>
         </div>
        </div>
@@ -136,9 +138,9 @@
            <div class="col-sm-4">
          </div>
          <div class="col-sm-4">
-             <img src="img/jquery.png" id="icon2">
+             <img src="img/jquery.png" class="icon">
               <h4>Bootstrap</h4>
-         </div>b
+         </div>
          <div class="col-sm-4">
        </div>
       </div>
