--- a/index.html
+++ b/index.html
@@ -241,9 +241,9 @@
             </iframe>
         </div>
         <div class="social-networks">
-            <a href="#" class="twitter"><i class="fa fa-twitter"></i></a>
-            <a href="#" class="facebook"><i class="fa fa-facebook"></i></a>
-            <a href="#" class="google"><i class="fa fa-google-plus"></i></a>
+            <a href="https://twitter.com/DCAL33T" class="twitter"><i class="fa fa-twitter"></i></a>
+            <a href="https://www.facebook.com/BubbleManiaClovis/" class="facebook"><i class="fa fa-facebook"></i></a>
+            <a href="https://plus.google.com/104739162105722877783" class="google"><i class="fa fa-google-plus"></i></a>
         </div>
         <div class="footer-copyright">
             <p>© 2017 Copyright Text </p>
