--- a/index.html
+++ b/index.html
@@ -61,17 +61,17 @@
         <ol class="carousel-indicators">
           <li data-target="#thumbnail-preview-indicators" data-slide-to="0" class="active">
             <div class="thumbnail">
-              <img class="img-responsive" src="http://cdn.pcwallart.com/images/yosemite-wallpaper-night-wallpaper-4.jpg">
+              <img class="img-responsive" src="img\grass.jpg">
             </div>
           </li>
           <li data-target="#thumbnail-preview-indicators" data-slide-to="1">
           <div class="thumbnail">
-              <img class="img-responsive" src="http://allswalls.com/images/sky-nature-mountain-space-stars-wallpaper-1.jpg">
+              <img class="img-responsive" src="img\white-mountain.jpg">
             </div>
           </li>
           <li data-target="#thumbnail-preview-indicators" data-slide-to="2">
           <div class="thumbnail">
-              <img class="img-responsive" src="https://www.hdwallpapers.in/walls/swiss_night_sky-wide.jpg">
+              <img class="img-responsive" src="img\swiss_night_sky-wide.jpg">
             </div>
           </li>
         </ol>
