--- a/index.html
+++ b/index.html
@@ -139,7 +139,7 @@
          </div>
          <div class="col-sm-4">
              <img src="img/jquery.png" class="icon">
-              <h4>Bootstrap</h4>
+              <h4>jQuery</h4>
          </div>
          <div class="col-sm-4">
        </div>
