--- a/about.html
+++ b/about.html
@@ -31,7 +31,7 @@
 
 
       <ul class="nav navbar-nav navbar-right">
-          <li><a href="#">Home</a></li>
+          <li><a href="index.html">Home</a></li>
         <li><a href="about.html">About Me</a></li>
         <li class="dropdown">
           <a href="#" class="dropdown-toggle" data-toggle="dropdown">Services <b class="caret"></b></a>
@@ -44,7 +44,9 @@
             <li class="divider"></li>
             <li><a href="#">One more separated link</a></li>
           </ul>
-            <li><a href="#">Contact</a></li>
+        </li>
+        <li><a href="#">Portfolio</a></li>
+        <li><a href="#">Contact</a></li>
 
 
 
@@ -55,144 +57,9 @@
   </nav>
 <div class="container-fluid">
 	<div class="row">
-		<!-- Carousel -->
-
-    <div id="thumbnail-preview-indicators" class="carousel slide" data-ride="carousel">
-        <!-- Indicators -->
-        <ol class="carousel-indicators">
-          <li data-target="#thumbnail-preview-indicators" data-slide-to="0" class="active">
-            <div class="thumbnail">
-              <img class="img-responsive" src="img\grass.jpg">
-            </div>
-          </li>
-          <li data-target="#thumbnail-preview-indicators" data-slide-to="1">
-          <div class="thumbnail">
-              <img class="img-responsive" src="img\white-mountain.jpg">
-            </div>
-          </li>
-          <li data-target="#thumbnail-preview-indicators" data-slide-to="2">
-          <div class="thumbnail">
-              <img class="img-responsive" src="img\swiss_night_sky-wide.jpg">
-            </div>
-          </li>
-        </ol>
-        <div class="carousel-inner">
-          <div class="item slides active">
-            <div class="slide-1"></div>
-            <div class="container">
-              <div class="carousel-caption">
-                <h1>New carousel layout</h1>
-                <p>Responsive thumbnail preview in carousel indicators.</p>
-                <p><a class="btn btn-lg btn-primary" href="#" role="button">Sign up today</a></p>
-              </div>
-            </div>
-          </div>
-          <div class="item slides">
-            <div class="slide-2"></div>
-            <div class="container">
-              <div class="carousel-caption">
-                <h1>Another example headline.</h1>
-                <p>Cras justo odio, dapibus ac facilisis in, egestas eget quam.</p>
-                <p><a class="btn btn-lg btn-primary" href="#" role="button">Learn more</a></p>
-              </div>
-            </div>
-          </div>
-          <div class="item slides">
-            <div class="slide-3"></div>
-            <div class="container">
-              <div class="carousel-caption">
-                <h1>One more for good measure.</h1>
-                <p>Nullam id dolor id nibh ultricies vehicula ut id elit.</p>
-                <p><a class="btn btn-lg btn-primary" href="#" role="button">Browse gallery</a></p>
-              </div>
-            </div>
-          </div>
-        </div>
-        <a class="left carousel-control" href="#thumbnail-preview-indicators" role="button" data-slide="prev"><span class="glyphicon glyphicon-chevron-left"></span></a>
-        <a class="right carousel-control" href="#thumbnail-preview-indicators" role="button" data-slide="next"><span class="glyphicon glyphicon-chevron-right"></span></a>
-          </div>
-            </div>
-              </div>
-<!-- /carousel -->
-   <div id="services" class="container-fluid tbpadding text-center ">
-              <h2 class="bigpixi_head"><span>100% Satisfactory </span>Sites</h2>
-              <h4>SEE WHAT I CAN DO FOR YOU!! </h4>
-              <br>
-          </div>
-        </div>
-          <div class="container text-center background">
-              <h2>What I'm Using</h2>
-             <div class="row">
-           <div class="col-sm-4">
-              <img src="img/html5.png" class="icon">
-              <h4>HTML5</h4></div>
-         <div class="col-sm-4">
-              <img src="img/bootstrap.png" class="icon">
-              <h4>Bootstrap</h4>
-           </div>
-         <div class="col-sm-4">
-              <img src="img/css3.png" class="icon">
-              <h4>CSS3</h4>
-        </div>
-       </div>
-            <div class="row">
-           <div class="col-sm-4">
-         </div>
-         <div class="col-sm-4">
-             <img src="img/jquery.png" class="icon">
-              <h4>jQuery</h4>
-         </div>
-         <div class="col-sm-4">
-       </div>
-      </div>
-    </div>
 
 
-<div class="container">
-<div class="banner-bottom">
-		<div class="container tbpadding">
-		<h2 class="bigpixi_head"><span>LETS GET </span>STARTED</h2>
-			<div class="col-md-12 text-center">
 
-           <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Even though using "lorem ipsum" often arouses curiosity because of its resemblance to classical Latin.Lorem ipsum dolor sit amet, consectetur adipiscing elit. ... Even though using "lorem ipsum" often arouses curiosity because of its resemblance to classical Latin</p>
-    </div>
-
-		</div>
-	</div>
-</div>
-<div class="container">
-    <div class="col-xs-6 col-sm-3">
-        <a href="#" class="thumbnail" data-toggle="modal" data-target="#lightbox">
-            <img src="img\B9AC221.jpg" alt="...">
-        </a>
-    </div>
-    <div class="col-xs-6 col-sm-3">
-        <a href="#" class="thumbnail" data-toggle="modal" data-target="#lightbox">
-            <img src="img\84colors1.png" alt="...">
-        </a>
-    </div>
-    <div class="col-xs-6 col-sm-3">
-        <a href="#" class="thumbnail" data-toggle="modal" data-target="#lightbox">
-            <img src="img\landing-page1.png" alt="...">
-        </a>
-    </div>
-    <div class="col-xs-6 col-sm-3">
-        <a href="#" class="thumbnail" data-toggle="modal" data-target="#lightbox">
-            <img src="img\50PortfolioSites1.png" alt="...">
-        </a>
-    </div>
-</div>
-
-<div id="lightbox" class="modal fade" tabindex="-1" role="dialog" aria-labelledby="myLargeModalLabel" aria-hidden="true">
-    <div class="modal-dialog">
-        <button type="button" class="close hidden" data-dismiss="modal" aria-hidden="true">×</button>
-        <div class="modal-content">
-            <div class="modal-body">
-                <img src="" alt="" />
-            </div>
-        </div>
-    </div>
-</div>
 
 <!--/FOOTER -->
 
