--- a/about.html
+++ b/about.html
@@ -71,8 +71,7 @@
 				<h2>Front-End Developer</h2>
 			</div>
 			<div class="profile-bio profile-same">
-				<p class="short-description">Hi! My name is 						David and I'm a Web Developer.
-					I build and design fast...</p>
+				<p class="short-description">Hi! My name is David and I'm a Web Developer. I build and design fast...</p>
 				<div id="profile-bio-wrapper">
 					<div id="show-more-icon" class="no-select">
 						<i class="fa fa-chevron-circle-up" aria-hidden="true"></i>
@@ -113,6 +112,40 @@ if (typeof(bioShowMore) != 'undefined' && bioShowMore != null){
 	});
 }
 </script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/modernizr/2.8.3/modernizr.js"></script>
+
+     <script
+       src="https://code.jquery.com/jquery-3.2.1.min.js "
+       integrity="sha256-hwg4gsxgFZhOsEEamdOYGBf13FyQuiTwlAQgxVSNgt4="
+       crossorigin=" anonymous "></script>
+       <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js " integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa " crossorigin="anonymous "></script>
+       <script type="text/javascript">
+         $(document).ready(function() {
+    var $lightbox = $('#lightbox');
+
+    $('[data-target="#lightbox"]').on('click', function(event) {
+        var $img = $(this).find('img'),
+            src = $img.attr('src'),
+            alt = $img.attr('alt'),
+            css = {
+                'maxWidth': $(window).width() - 100,
+                'maxHeight': $(window).height() - 100
+            };
+
+        $lightbox.find('.close').addClass('hidden');
+        $lightbox.find('img').attr('src', src);
+        $lightbox.find('img').attr('alt', alt);
+        $lightbox.find('img').css(css);
+    });
+
+    $lightbox.on('shown.bs.modal', function (e) {
+        var $img = $lightbox.find('img');
+
+        $lightbox.find('.modal-dialog').css({'width': $img.width()});
+        $lightbox.find('.close').removeClass('hidden');
+    });
+});
+       </script>
 
    </body>
  </html>
